--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.002   2019-02-13 (PERLANCAR)
+
+	- Show each calendar with a different color.
+
+
 0.001   2019-02-13 (PERLANCAR)
 
         - First release.
