--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.003   2019-02-13 (PERLANCAR)
+
+	- Add option -a (get dates from all installed Calendar::Dates::*
+	  modules).
+
+	- [ux] Show calendar date module name for each entry.
+
+
 0.002   2019-02-13 (PERLANCAR)
 
 	- Show each calendar with a different color.
