--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.006   2023-06-21  Released-By: PERLANCAR; Urgency: medium
+
+        - Add option --date.
+
+
 0.005   2019-03-26  Released-By: PERLANCAR
 
 	- [build] Remove usage of DZP-Rinci-Validate to resolve RT#128914.
