--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.007   2023-06-22  Released-By: PERLANCAR; Urgency: low
+
+        - No functional changes.
+
+        - Tweak Abstract and Description.
+
+
 0.006   2023-06-21  Released-By: PERLANCAR; Urgency: medium
 
         - Add option --date.
